--- a/Amazon/src/components/styles/pages/orders.css
+++ b/Amazon/src/components/styles/pages/orders.css
@@ -1,4 +1,4 @@
-.main {
+.mainss {
   max-width: 850px;
   margin-top: 90px;
   margin-bottom: 100px;
@@ -13,19 +13,19 @@
   margin-right: auto;
 }
 
-.page-title {
+.mainss .page-title {
   font-weight: 700;
   font-size: 26px;
   margin-bottom: 25px;
 }
 
-.orders-grid {
+.mainss .orders-grid {
   display: grid;
   grid-template-columns: 1fr;
   row-gap: 50px;
 }
 
-.order-header {
+.mainss .order-header {
   background-color: rgb(240, 242, 242);
   border: 1px solid rgb(213, 217, 217);
 
@@ -38,54 +38,54 @@
   border-top-right-radius: 8px;
 }
 
-.order-header-left-section {
+.mainss .order-header-left-section {
   display: flex;
   flex-shrink: 0;
 }
 
-.order-header-label {
+.mainss .order-header-label {
   font-weight: 500;
 }
 
-.order-date,
-.order-total {
+.mainss .order-date,
+.mainss .order-total {
   margin-right: 45px;
 }
 
-.order-header-right-section {
+.mainss .order-header-right-section {
   flex-shrink: 1;
 }
 
 @media (max-width: 575px) {
-  .order-header {
+  .mainss .order-header {
     flex-direction: column;
     align-items: start;
     line-height: 23px;
     padding: 15px;
   }
 
-  .order-header-left-section {
+  .mainss .order-header-left-section {
     flex-direction: column;
   }
 
-  .order-header-label {
+  .mainss .order-header-label {
     margin-right: 5px;
   }
 
-  .order-date,
-  .order-total {
+  .mainss .order-date,
+  .mainss .order-total {
     display: grid;
     grid-template-columns: auto 1fr;
     margin-right: 0;
   }
 
-  .order-header-right-section {
+  .mainss .order-header-right-section {
     display: grid;
     grid-template-columns: auto 1fr;
   }
 }
 
-.order-details-grid {
+.mainss .order-details-grid {
   padding: 40px 25px;
   border: 1px solid rgb(213, 217, 217);
   border-top: none;
@@ -100,7 +100,7 @@
 }
 
 @media (max-width: 800px) {
-  .order-details-grid {
+  .mainss .order-details-grid {
     grid-template-columns: 110px 1fr;
     row-gap: 0;
     padding-bottom: 8px;
@@ -108,34 +108,36 @@
 }
 
 @media (max-width: 450px) {
-  .order-details-grid {
+  .mainss .order-details-grid {
     grid-template-columns: 1fr;
   }
 }
 
-.product-image-container {
+.mainss .product-image-container {
   text-align: center;
+  /* padding: 0; */
+  height: auto;
 }
 
-.product-image-container img {
+.mainss .product-image-container img {
   max-width: 110px;
   max-height: 110px;
 }
 
-.product-name {
+.mainss .product-name {
   font-weight: 700;
   margin-bottom: 5px;
 }
 
-.product-delivery-date {
+.mainss .product-delivery-date {
   margin-bottom: 3px;
 }
 
-.product-quantity {
+.mainss .product-quantity {
   margin-bottom: 8px;
 }
 
-.buy-again-button {
+.mainss .buy-again-button {
   font-size: 15px;
   width: 140px;
   height: 36px;
@@ -146,27 +148,27 @@
   justify-content: center;
 }
 
-.buy-again-icon {
+.mainss .buy-again-icon {
   width: 25px;
   margin-right: 15px;
 }
 
-.product-actions {
+.mainss .product-actions {
   align-self: start;
 }
 
-.track-package-button {
+.mainss .track-package-button {
   width: 100%;
   font-size: 15px;
   padding: 8px;
 }
 
 @media (max-width: 800px) {
-  .buy-again-button {
+  .mainss .buy-again-button {
     margin-bottom: 10px;
   }
 
-  .product-actions {
+  .mainss .product-actions {
     /* grid-column: 2 means this element will be placed
        in column 2 in the grid. (Normally, the column that
        an element is placed in is determined by the order
@@ -176,36 +178,36 @@
     margin-bottom: 30px;
   }
 
-  .track-package-button {
+  .mainss .track-package-button {
     width: 140px;
   }
 }
 
 @media (max-width: 450px) {
-  .product-image-container {
+  .mainss .product-image-container {
     text-align: center;
     margin-bottom: 25px;
   }
 
-  .product-image-container img {
+  .mainss .product-image-container img {
     max-width: 150px;
     max-height: 150px;
   }
 
-  .product-name {
+  .mainss .product-name {
     margin-bottom: 10px;
   }
 
-  .product-quantity {
+  .mainss .product-quantity {
     margin-bottom: 15px;
   }
 
-  .buy-again-button {
+  .mainss .buy-again-button {
     width: 100%;
     margin-bottom: 15px;
   }
 
-  .product-actions {
+  .mainss .product-actions {
     /* grid-column: auto; undos grid-column: 2; from above.
        This element will now be placed in its normal column
        in the grid. */
@@ -213,7 +215,7 @@
     margin-bottom: 70px;
   }
 
-  .track-package-button {
+  .mainss .track-package-button {
     width: 100%;
     padding: 12px;
   }
