--- a/Instagram/src/main.css
+++ b/Instagram/src/main.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     box-sizing: border-box;
     margin: 0;
     padding:  0;
@@ -9,4 +9,4 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} */
