--- a/Instagram/src/main.css
+++ b/Instagram/src/main.css
@@ -1,12 +1,15 @@
-/* * {
-    box-sizing: border-box;
-    margin: 0;
-    padding:  0;
+::-webkit-scrollbar {
+	width: 10px;
 }
-body {
-    background-color: black;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-} */
+
+::-webkit-scrollbar-track {
+	background: #1e1e24;
+}
+
+::-webkit-scrollbar-thumb {
+	background: #3f3f40;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: #555;
+}
